--- a/chi-noir/app/globals.css
+++ b/chi-noir/app/globals.css
@@ -20,9 +20,18 @@
 }
 
 body {
+  transition-property: all;
+  transition-duration: 1s;
+  transition-timing-function: ease-in-out;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.pageTransition {
+  opacity: 0;
+  filter: blur(10px);
+  background: black;
 }
 
 .sceneViginette {
