--- a/chi-noir/app/globals.css
+++ b/chi-noir/app/globals.css
@@ -39,3 +39,10 @@ body {
   -webkit-box-shadow: 0px 0px 400px 72px rgba(0, 0, 0, 1) inset;
   -moz-box-shadow: 0px 0px 400px 72px rgba(0, 0, 0, 1) inset;
 }
+
+.heroText {
+  text-shadow:
+    0 0 8px rgba(255, 255, 255, 0.6),
+    0 0 18px rgba(255, 255, 255, 0.35);
+  letter-spacing: 0.15em;
+}
